--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,6 @@
     <title>Hello</title>
 </head>
 <body>
-<h1>Hello World</h1>
-<h2>Hello World</h2>
-<h3>Hello World</h3>
+Hello World
 </body>
 </html>
